# pandasohlcv

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-app.yml
pandasohlcv/: __init__.py  ohlcv_grouper.pyx
tests/: test_ohlcv.py
