[build-system]
requires = ["setuptools>=59.6.0", "wheel", "Cython==3.0.7", "numpy==1.21.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasohlcv"
version = "0.1.0"
authors = [{ name = "Mohammad Ghorbani" }]
description = "Resample OHLCV dataframe by given frequency."
readme = "README.md"
requires-python = ">=3.9.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mghmgh1281375/pandasohlcv"
Issues = "https://github.com/mghmgh1281375/pandasohlcv/issues"
